--- a/web/appsettings.json
+++ b/web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MyPortfolioDB": "Server=.;Initial Catalog=MyPortfolio; Integrated Security=True;"
+  }
 }
